add sample blast config
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathWebSvcCommon/branches/stream@58546 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/WSFPlugin/config/blast-config.xml.sample
+++ b/WSFPlugin/config/blast-config.xml.sample
@@ -8,8 +8,8 @@
     using the new NCBI BLAST+ with old parameter format, the path should
     include "<....>/bin/legacy_blast.pl " in the end. Note that in this
     case, the empty space at the end is needed. -->
-  <!--entry key="BlastPath">/opt/ncbi-blast2/</entry-->
-  <entry key="BlastPath">/opt/WU_BLAST/</entry>
+  <!--entry key="BlastPath">/opt/WU_BLAST/</entry-->
+  <entry key="BlastPath">/opt/ncbi-blast2/bin/</entry>
 
   <!-- Optional, the temporary path for BLAST to make input files
     and save output files. This entry is optional, and "/tmp/blast" as
